# eoxserver

./: .bumpversion.cfg  .dockerignore  .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HOWTO  LICENSE  MANIFEST.in  README  README.md  README.rst  Readme.md  catalog.xml  conf.py  copyright.rst  credits.rst  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  index.rst  manage.py  pyproject.toml  readthedocs.yaml  requirements.txt  settings.py  setup.cfg  setup.py  urls.py  validate_examples.sh  wsgi.py
_static/: eoxserver.css
apidoc/: eoxserver.backends.rst  eoxserver.core.decoders.rst  eoxserver.core.rst  eoxserver.processing.preprocessing.rst  eoxserver.processing.rst  eoxserver.resources.coverages.metadata.formats.rst  eoxserver.resources.coverages.rst  eoxserver.resources.processes.rst  eoxserver.resources.rst  eoxserver.services.gdal.rst  eoxserver.services.mapserver.wms.layerfactories.rst  eoxserver.services.mapserver.wms.rst  eoxserver.services.ows.common.rst  eoxserver.services.ows.common.v20.rst  eoxserver.services.ows.rst  eoxserver.services.ows.wcs.v20.encodings.rst  eoxserver.services.ows.wcs.v20.packages.rst  eoxserver.services.ows.wps.parameters.rst  eoxserver.services.ows.wps.processes.rst  eoxserver.services.ows.wps.v10.rst  eoxserver.services.rst  eoxserver.testing.rst  eoxserver.webclient.rst  modules.rst
autotest/: .gitignore  HOWTO  MANIFEST.in  README.md  README.rst  bug_report.odt  client_fixures.sh  docker-compose.yml  eoxserver.env  make_fixtures.sh  manage.py  settings.py  setup.py  urls.py  wsgi.py
autotest_services/: base.py  testbase.py  views.py
conf/: eoxserver.conf
debian/: changelog  control  copyright  python-eoxserver.install  rules
developers/: autotest.rst  basics.rst  code-style-guide.rst  handling_coverages.rst  index.rst  migrations.rst  modules.rst  plugins.rst  processes.rst
docker/: Dockerfile  Readme.md  eoxserver-entrypoint.sh  gunicorn.conf.py  sample.env
docs/: HOWTO
documentation/: Makefile  Readme.md  conf.py  copyright.rst  credits.rst  index.rst
en/: index.rst
eoxserver/: COMMITTERS  COPYING  INSTALL  README  TEMPLATE_settings.py  __init__.py  create_instance.py  manage.py  setup.py  urls.py  views.py
gmlcov/: ReadMe.txt
(+3122 files in other folders)
