[metadata]
name = EOxServer
version = attr: eoxserver.__version__
author = EOX IT Services GmbH
author_email = office@eox.at
maintainer = EOX IT Services GmbH
maintainer_email = packages@eox.at
description = EOxServer is a server for Earth Observation (EO) data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Earth Observation, EO, OGC, WCS, WMS
license = EOxServer Open License (MIT-style)
url = http://eoxserver.org/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
    eoxserver/scripts/eoxserver-instance.py
    tools/eoxserver-atpd.py
    tools/eoxserver-validate_xml.py
    tools/eoxserver-preprocess.py

install_requires = file: requirements.txt

[options.extras_require]
dev =
    scipy
    flake8
    mypy
    black
docs =
    sphinx
    sphinx_rtd_theme
    myst-parser


[options.packages.find]
include = eoxserver

[bdist_rpm]
requires = Django >= 1.4
           gdal-python
           mapserver-python
           libxml2-python
           python-lxml
           python ply

[flake8]
max-line-length = 90
exclude = .venv, build, tests, docs, autotest
ignore = W503,E203

[mypy]
exclude = (.venv|build|tests|docs|autotest)
ignore_missing_imports = True
